Fix particles.js mobile alignment bug
There was a bug where the canvas was slightly off on mobile, causing the page to be wider than viewport. This has now been fixed.

--- a/res/css/ridge.css
+++ b/res/css/ridge.css
@@ -16,6 +16,7 @@
 
 .particles-js-canvas-el{
     position: absolute;
+    left: 0 !important;
 }
 
 @keyframes RidgeHover {
